# device_screen_brightness

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  jnigen.yaml  lldb_ddc_hooks.py  pubspec.yaml  spec_device_screen_brightness.md
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: device_screen_brightness.podspec
ios/Classes/: device_screen_brightness.c  device_screen_brightness.m
lib/: device_screen_brightness.dart  device_screen_brightness_bindings_generated.dart
lib/src/: brightness_mode.dart
lib/src/backends/: android_backend.dart  backend_selector.dart  device_screen_brightness_backend.dart  ffi_backend.dart
lib/src/compute/: device_screen_brightness_compute.dart
lib/src/exceptions/: device_screen_brightness_exception.dart
linux/: CMakeLists.txt
macos/: device_screen_brightness.podspec
macos/Classes/: device_screen_brightness.c  device_screen_brightness.m
src/: CMakeLists.txt  device_screen_brightness.c  device_screen_brightness.h
test/: device_screen_brightness_test.dart  exceptions_test.dart  ffi_backend_error_test.dart
windows/: CMakeLists.txt
(+6 files in other folders)
